# ecommerce-intel-copilot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  PROJECT_PLAN.md  README.md  STATUS.md  SYSTEM_CARD.md  app.py  pyproject.toml  requirements.txt
docs/: DECISIONS.md  STATUS.md  aws-deployment.md
eval/: questions.jsonl  run_eval.py
infra/terraform/: app.tf  outputs.tf  variables.tf
notebooks/: 01_data_pipeline.ipynb
src/copilot/: config.py  graph.py  llm.py  state.py
src/copilot/agents/: critic.py  knowledge.py  sql_analyst.py
src/copilot/tools/: analytics.py  cache.py  sql_guard.py
src/copilot/ui/: app.py
tests/: test_analytics.py  test_critic.py  test_sql_guard.py
