[project]
name = "copilot"
version = "0.1.0"
description = "E-Commerce Product Intelligence Copilot"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "jupyter",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "langgraph>=0.2",
    "litellm>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["llm: tests that call a live LLM (cost/latency; deselect with -m 'not llm')"]